Bug 189785 CTL shouldn't use quotes for modulename r=Roland.Mainz@informatik.med.uni-giessen.de sr=alecf